// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts test > Snapshot of comparison results 1`] = `
"
<!-- __NUXTJS_BUNDLE -->
# Bundle Size
| Route | Size (gzipped) |
| --- | --- |
| \`app\` | 109.56 kB (🟢 -10.44 kB) |
| \`pages/index\` | removed |
| \`components/tutorial\` | removed |
| \`pages/test\` | removed |"
`;

exports[`ts test > Vite comparison results test 1`] = `
"
<!-- __NUXTJS_BUNDLE -->
# Bundle Size
| Route | Size (gzipped) |
| --- | --- |
| \`app\` | 192.51 kB (🔴 72.51 kB) |
| \`pages/index\` | removed |
| \`components/tutorial\` | removed |
| \`pages/test\` | removed |"
`;

exports[`ts test > Vite page analysis results test 1`] = `
"
<!-- __NUXTJS_BUNDLE -->
# Bundle Size
| Route | Size (gzipped) |
| --- | --- |
| \`app\` | 62.08 kB (🟢 -57.93 kB) |
| \`about\` | 3.26 kB (added) |
| \`index\` | 3.1 kB (added) |
| \`pages/index\` | removed |
| \`components/tutorial\` | removed |
| \`pages/test\` | removed |"
`;

exports[`ts test > comparison results test 1`] = `
"
<!-- __NUXTJS_BUNDLE -->
# Bundle Size
| Route | Size (gzipped) |
| --- | --- |
| \`app\` | 109.56 kB (🟢 -10.44 kB) |
| \`pages/index\` | removed |
| \`components/tutorial\` | removed |
| \`pages/test\` | removed |"
`;
